--- a/packaging/deb/core-gui.install.in
+++ b/packaging/deb/core-gui.install.in
@@ -1,11 +1,9 @@
 #! /usr/bin/dh-exec
 @BINDIR@/core-gui
 @CORE_LIB_DIR@
-# configure prints a warning if CORE_DATA_DIR is used here
-# ATdatarootdirAT is expanding to ${datarootdir}/man/man1/
-/usr/share/core/icons
-/usr/share/core/examples/configs
-/usr/share/pixmaps
-/usr/share/applications
-# ATmandirAT is expanding to ${datarootdir}/man/man1/core-gui.1
-/usr/share/man/man1/core-gui.1
+@CORE_DATA_DIR@/icons
+@CORE_DATA_DIR@/examples/configs
+@datarootdir@/pixmaps
+@datarootdir@/applications
+# ATmandirAT is expanding to ${datarootdir}/man
+@datarootdir@/man/man1/core-gui.1
