moved servers and request handlers to separate module. added support for auxiliary server with configurable request handlers

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -62,4 +62,4 @@ emane_models = RfPipe, Ieee80211abg, CommEffect, Bypass
 #emane_log_level = 2
 emane_realtime = True
 
-api2port = 12222
+aux_request_handler = core.addons.api2.CoreApi2RequestHandler:12222
