--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -62,3 +62,4 @@ emane_models = RfPipe, Ieee80211abg, CommEffect, Bypass
 #emane_log_level = 2
 emane_realtime = True
 
+aux_request_handler = core.addons.api2handler.CoreApi2RequestHandler:12222
