--- a/daemon/.pylintrc
+++ b/daemon/.pylintrc
@@ -71,7 +71,7 @@ disable=all
 
 # import-error -> goes off for emane and docker if not installed
 
-enable=import-self,reimported,relative-import,deprecated-module
+enable=import-self,reimported,relative-import,deprecated-module,misplaced-future,cyclic-import,wrong-import-order
 
 
 [REPORTS]
