--- a/daemon/.pylintrc
+++ b/daemon/.pylintrc
@@ -71,7 +71,7 @@ disable=all
 
 # import-error -> goes off for emane and docker if not installed
 
-enable=import-self,reimported,relative-import,deprecated-module,misplaced-future,cyclic-import,wrong-import-order,wrong-import-position,ungrouped-imports,multiple-imports,init-import,relative-beyond-top-level,unused-import,wildcard-import,unused-wildcard-import,import-star-module-level
+enable=import-self,reimported,relative-import,deprecated-module,misplaced-future,cyclic-import,wrong-import-order,wrong-import-position,ungrouped-imports,multiple-imports,init-import,relative-beyond-top-level,unused-import,wildcard-import,unused-wildcard-import,import-star-module-level,cyclic-import
 
 
 [REPORTS]
