daemon: Add the EMANE TDMA model to the list of an available models.

--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -57,7 +57,7 @@ emane_platform_port = 8101
 emane_transform_port = 8201
 emane_event_generate = True
 emane_event_monitor = False
-emane_models = RfPipe, Ieee80211abg, CommEffect, Bypass
+emane_models = RfPipe, Ieee80211abg, CommEffect, Bypass, Tdma
 # EMANE log level range [0,4] default: 2
 #emane_log_level = 2
 emane_realtime = True
