daemon: deprecate quagga 'vtysh' service
Quagga services all share a common startup script (quaggaboot.sh)
generated by the 'zebra' service. They also share a common config
file, with "vtysh -b" pushing the relevant portion thereof to each
applicable service daemon.

Once the various routing daemons (ospf, bgp, rip, etc.) are up,
the 'vtysh' service is responsible for configuring each one by
executing "vtysh -b". This presents a synchronization challenge,
since daemons are started concurrently, and the 'vtysh' service
must wait until all of them are running (by ensuring each daemon's
respective *.vty file is present in $QUAGGA_STATE_DIR).

If the 'vtysh' service gives up too early, all daemons end up in
a started but unconfigured state. OTOH, if a daemon fails to start,
we don't want the 'vtysh' service spinning in an infinite loop,
still waiting for the failed daemon's *.vty file.

This patch deprecates the 'vtysh' service, leaving individual
routing services responsible for the configuration of their
respective daemon, by invoking their own instance of "vtysh -b".

When a starting service runs "vtysh -b", it will redundantly
reconfigure all other already-running daemons. This added
redundancy is harmless to the daemons being (re-)configured, and
has the advantage of removing the need to guesstimate an
appropriate timeout for the 'vtysh' service.

To prevent concurrent "vtysh -b" instances from locking each other
out by attempting to simultaneously open the same set of *.vty
files, the "flock" utility (present by default on both Linux and
BSD) is used for mutual exclusion.

On large simulations, this change results in more processes being
started at a faster rate, which could run afoul of local fork-bomb
mitigation policies. For instance, systemd might be configured
with "DefaultTasksAccounting=yes" and "DefaultTasksMax=512" (e.g.,
see /etc/systemd/system.conf on Fedora 24). To avoid being subject
to this limit, "TasksMax=infinity" was also added to the unit file
t

--- a/scripts/core-daemon.service.in
+++ b/scripts/core-daemon.service.in
@@ -6,6 +6,7 @@ After=network.target
 Type=forking
 PIDFile=/var/run/core-daemon.pid
 ExecStart=@PYTHON@ @SBINDIR@/core-daemon -d
+TasksMax=infinity
 
 [Install]
 WantedBy=multi-user.target
