--- a/daemon/data/core.conf
+++ b/daemon/data/core.conf
@@ -23,29 +23,29 @@ quagga_sbin_search = "/usr/local/sbin /usr/sbin /usr/lib/quagga"
 #   and not named 'services'
 #custom_services_dir = /home/username/.core/myservices
 #
-# uncomment to  establish a standalone control backchannel for accessing nodes 
+# uncomment to  establish a standalone control backchannel for accessing nodes
 # (overriden by the session option of the same name)
-#controlnet = 172.16.0.0/24 
-# 
+#controlnet = 172.16.0.0/24
+#
 #
 # uncomment and edit to establish a distributed control backchannel
-#controlnet = core1:172.16.1.0/24 core2:172.16.2.0/24 core3:172.16.3.0/24 core4 :172.16.4.0/24 core5:172.16.5.0/24
+#controlnet = core1:172.16.1.0/24 core:172.16.2.0/24 core3:172.16.3.0/24 core4 :172.16.4.0/24 core5:172.16.5.0/24
 
 # uncomment and edit to establish distributed auxiliary control channels.
-#controlnet1 = core1:172.17.1.0/24 core2:172.17.2.0/24 core3:172.17.3.0/24 core4 :172.17.4.0/24 core5:172.17.5.0/24
-#controlnet2 = core1:172.18.1.0/24 core2:172.18.2.0/24 core3:172.18.3.0/24 core4 :172.18.4.0/24 core5:172.18.5.0/24
-#controlnet3 = core1:172.19.1.0/24 core2:172.19.2.0/24 core3:172.19.3.0/24 core4 :172.19.4.0/24 core5:172.19.5.0/24
+#controlnet1 = core1:172.17.1.0/24 core:172.17.2.0/24 core3:172.17.3.0/24 core4 :172.17.4.0/24 core5:172.17.5.0/24
+#controlnet2 = core1:172.18.1.0/24 core:172.18.2.0/24 core3:172.18.3.0/24 core4 :172.18.4.0/24 core5:172.18.5.0/24
+#controlnet3 = core1:172.19.1.0/24 core:172.19.2.0/24 core3:172.19.3.0/24 core4 :172.19.4.0/24 core5:172.19.5.0/24
 
-# uncomment and edit to assign host interfaces to auxilary control channels 
-# for use in connecting with other servers in a distributed environments. 
+# uncomment and edit to assign host interfaces to auxilary control channels
+# for use in connecting with other servers in a distributed environments.
 # Note: This is valid for auxiliary control channels only. The primary control
-# channel, specified by 'controlnet', is tunneled across servers. 
+# channel, specified by 'controlnet', is tunneled across servers.
 #controlnetif1 = eth2
 #controlnetif2 = eth3
 #controlnetif3 = eth4
 
-# optional controlnet configuration script for controlnet, uncomment to 
-# activate, and likely edit the script. 
+# optional controlnet configuration script for controlnet, uncomment to
+# activate, and likely edit the script.
 # Note: the controlnet_updown_script is not used by the auxiliary control
 # channels.
 # controlnet_updown_script = /usr/local/share/core/examples/controlnet_updown
@@ -62,4 +62,4 @@ emane_models = RfPipe, Ieee80211abg, CommEffect, Bypass
 #emane_log_level = 2
 emane_realtime = True
 
-aux_request_handler = core.addons.api2handler.CoreApi2RequestHandler:12222
+#aux_request_handler = core.addons.api2handler.CoreApi2RequestHandler:12222
