globally replace mailing list URLs and dev email
update to:
https://publists.nrl.navy.mil/mailman/listinfo/core-users
https://publists.nrl.navy.mil/mailman/listinfo/core-dev

dev email:
core-dev@nrl.navy.mil

--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@
 #
 # this defines the CORE version number, must be static for AC_INIT
 #
-AC_INIT(core, m4_esyscmd_s([./revision.sh 4.8]), core-dev@pf.itd.nrl.navy.mil)
+AC_INIT(core, m4_esyscmd_s([./revision.sh 4.8]), core-dev@nrl.navy.mil)
 VERSION=$PACKAGE_VERSION
 CORE_VERSION=$PACKAGE_VERSION
 CORE_VERSION_DATE=m4_esyscmd_s([./revision.sh -d])
