small test cleanup, can isolate to a singular core test fixture

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,6 +16,8 @@ sonar.sourceEncoding=UTF-8
 sonar.scm.provider=git
 
 # python adapter library
-PythonLibrary.sonar.projectBaseDir=daemon/core
+PythonLibrary.sonar.projectBaseDir=daemon
 PythonLibrary.sonar.language=py
-PythonLibrary.sonar.sources=./
+PythonLibrary.sonar.sources=./core
+PythonLibrary.sonar.tests=./tests
+PythonLibrary.sonar.python.coverage.reportPath=coverage.xml
