--- a/daemon/requirements.txt
+++ b/daemon/requirements.txt
@@ -1,9 +1,10 @@
 enum34==1.1.6
 grpcio==1.0.0
 grpcio-tools==1.0.0
+mock==1.3.0
 pycco==0.5.1
+pytest==3.0.7
+pytest-cov==2.5.1
+pytest-runner==2.11.1
 sphinx==1.4.8
 sphinx_rtd_theme==0.1.9
-pytest==3.0.7
-pytest-runner==2.11.1
-pytest-cov==2.5.1
