--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -17,3 +17,5 @@ VIMAGE_BIN              = "@vimage_path@/vimage"
 QUAGGA_STATE_DIR        = "@CORE_STATE_DIR@/run/quagga"
 MOUNT_BIN               = "@mount_path@/mount"
 UMOUNT_BIN              = "@umount_path@/umount"
+OVS_BIN                 = "@ovs_vs_path@/ovs-vsctl"
+OVS_FLOW_BIN            = "@ovs_of_path@/ovs-ofctl"
