--- a/packaging/rpm/core.spec.in
+++ b/packaging/rpm/core.spec.in
@@ -318,6 +318,9 @@ fi
 %{python_sitearch}/netns.so
 %{python_sitearch}/vcmd.so
 %dir %{python_sitelib}/core
+%{python_sitelib}/core/sdt.py*
+%{python_sitelib}/core/service.py*
+%{python_sitelib}/core/coreserver.py*
 %dir %{python_sitelib}/core/addons
 %{python_sitelib}/core/addons/__init__.py*
 %dir %{python_sitelib}/core/api
@@ -379,11 +382,7 @@ fi
 %dir %{python_sitelib}/core/phys
 %{python_sitelib}/core/phys/__init__.py*
 %{python_sitelib}/core/phys/pnodes.py*
-%{python_sitelib}/core/pycore.py*
 %{python_sitelib}/core_python-@COREDPY_VERSION@-py%{python_version}.egg-info
-%{python_sitelib}/core/sdt.py*
-%{python_sitelib}/core/service.py*
-%{python_sitelib}/core/coreserver.py*
 %dir %{python_sitelib}/core/services
 %{python_sitelib}/core/services/bird.py*
 %{python_sitelib}/core/services/__init__.py*
@@ -410,7 +409,7 @@ fi
 %{_sbindir}/vnoded
 
 %changelog
-* XXX XXX X 2017 CORE Developers <core-dev@nrl.navy.mil> - 5.0
+* Fri Aug 18 2017 CORE Developers <core-dev@nrl.navy.mil> - 5.0
 - Added Ryu SD and Open vSwitch services, code cleanup and refactoring
 * Fri Jun 5 2015 CORE Developers <core-dev@pf.itd.nrl.navy.mil> - 4.8
 - Support for NRL Network Modeling Framework (NMF) XML representation, bugfixes
