daemon: add ${pyexecdir} to $PYTHONPATH in daemon/src/Makefile
On x86_64, the "core_python_netns" module is installed into ${pyexecdir},
a.k.a. %{python_sitearch}, a.k.a. "/usr/lib64/python2.7/site-packages".
Adding ${pyexecdir} to $PYTHONPATH will prevent the "install" target in
"daemon/src/Makefile" from failing.

Signed-off-by: Gabriel Somlo <glsomlo@cert.org>

--- a/daemon/src/Makefile.am
+++ b/daemon/src/Makefile.am
@@ -40,7 +40,7 @@ libnetns.a:
 install-exec-local:
 	$(MKDIR_P) ${DESTDIR}/${pythondir}
 	$(MKDIR_P) ${DESTDIR}/${pyexecdir}
-	SBINDIR=${DESTDIR}/@SBINDIR@ PYTHONPATH=${DESTDIR}/${pythondir} $(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) install \
+	SBINDIR=${DESTDIR}/@SBINDIR@ PYTHONPATH=${DESTDIR}/${pythondir}:${DESTDIR}/${pyexecdir} $(PYTHON) $(SETUPPY) $(SETUPPYFLAGS) install \
 		--prefix=${DESTDIR}/${pyprefix} \
 		--install-purelib=${DESTDIR}/${pythondir} \
 		--install-platlib=${DESTDIR}/${pyexecdir} \
