updates to target building separate packages with fpm

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,6 +72,58 @@ deb:
 	@echo "First create source archive with:  dpkg-source -b core-@CORE_VERSION@"
 	@echo "Then build with:  pbuilder-dist precise i386 build core*.dsc"
 
+.PHONE: fpm
+fpm:
+	fpm -s python -t rpm \
+			-m "CORE Developers <core-dev@nrl.navy.mil>" \
+			--vendor "CORE Developers" \
+			daemon/setup.py
+	fpm -s python -t rpm \
+    		-m "CORE Developers <core-dev@nrl.navy.mil>" \
+    		--vendor "CORE Developers" \
+    		daemon/src/setup.py
+    fpm -s python -t rpm \
+    		-m "CORE Developers <core-dev@nrl.navy.mil>" \
+    		--vendor "CORE Developers" \
+    		daemon/ns3/setup.py
+
+.PHONY: fpm-deb
+fpm-deb:
+	fpm -s dir -t deb -n core -v $(CORE_VERSION) -C "$DESTDIR" \
+			-p core_VERSION_ARCH.deb \
+			--license "BSD 2-clause" \
+			--vendor "CORE Developers" \
+			--description "Emulate virtual networks in a box." \
+			--url http://www.nrl.navy.mil/itd/ncs/products/core \
+			-m "CORE Developers <core-dev@nrl.navy.mil>" \
+			-d "procps" \
+			-d "libc6 >= 2.14" \
+			-d "bash >= 3.0" \
+			-d "bridge-utils" \
+			-d "ebtables" \
+			-d "iproute2" \
+			-d "libev4" \
+			-d "python >= 2.7" \
+			--deb-recommends quagga
+
+
+.PHONY: fpm-rpm
+fpm-rpm:
+	fpm -s dir -t rpm -n core -v $(CORE_VERSION) -C "$DESTDIR" \
+			-p core_VERSION_ARCH.rpm \
+			--license "BSD 2-clause" \
+			--vendor "CORE Developers" \
+			--description "Emulate virtual networks in a box." \
+			--url http://www.nrl.navy.mil/itd/ncs/products/core \
+			-m "CORE Developers <core-dev@nrl.navy.mil>" \
+			-d "procps" \
+			-d "bash >= 3.0" \
+			-d "bridge-utils" \
+			-d "ebtables" \
+			-d "iproute" \
+			-d "libev" \
+			-d "python >= 2.7"
+
 .PHONY: core-restart
 core-restart:
 	/etc/init.d/core-daemon stop
