--- a/daemon/core/constants.py.in
+++ b/daemon/core/constants.py.in
@@ -4,7 +4,8 @@ CORE_STATE_DIR		= "@CORE_STATE_DIR@"
 CORE_CONF_DIR		= "@CORE_CONF_DIR@"
 CORE_DATA_DIR		= "@CORE_DATA_DIR@"
 CORE_LIB_DIR		= "@CORE_LIB_DIR@"
-CORE_SBIN_DIR		= "@BINDIR@"
+CORE_SBIN_DIR		= "@SBINDIR@"
+CORE_BIN_DIR		= "@BINDIR@"
 
 BRCTL_BIN               = "@brctl_path@/brctl"
 SYSCTL_BIN              = "@sysctl_path@/sysctl"
