--- a/configure.ac
+++ b/configure.ac
@@ -172,6 +172,12 @@ else
   want_docs=no
 fi
 
+# check for sphinx required during make
+AC_CHECK_PROG(sphinxapi_path, sphinx-apidoc, $as_dir, no, $SEARCHPATH)
+if test "x$sphinxapi_path" = "xno" ; then
+    AC_MSG_ERROR(["Could not location sphinx-apidoc, from the python-sphinx package"])
+fi
+
 #AC_PATH_PROGS(tcl_path, [tclsh tclsh8.5 tclsh8.4], no)
 #if test "x$tcl_path" = "xno" ; then
 #    AC_MSG_ERROR([Could not locate tclsh. Please install Tcl/Tk.])
