--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 # branch name for the sonar analysis
-sonar.branch=origin/cleanup
+sonar.branch=origin/master
 
 # required metadata
 sonar.projectKey=CORE
 sonar.projectName=CORE
-sonar.projectVersion=1.0.0
+sonar.projectVersion=5.1
 
 # define modules
 sonar.modules=PythonLibrary
