removed deprecated sonarqube setting to try and leverage new branch settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # branch name for the sonar analysis
-sonar.branch=origin/master
+sonar.branch.name=5.1_shell_cleanup
+sonar.branch.target=master
 
 # required metadata
 sonar.projectKey=CORE
